nova_tests/plan124/neg/plan124_8_tuple_pub_field_neg.nv
// EXPECT_COMPILE_ERROR E_TUPLE_NO_PRIV
//
// Plan 124.8 — negative: `pub` modifier также запрещён (всё уже public).
module neg.plan124_8_tuple_pub_field_neg

type Pair(pub a int, b int)
